--- a/index.html
+++ b/index.html
@@ -2,35 +2,36 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
   <title>Frontend Mentor | Product preview card component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+  <main>
+    <div class="productCard">
+      <div class="productCard__wrap">
+        <img srcset="images/image-product-mobile.jpg 325w" src="images/image-product-desktop.jpg" alt="Photo of product" class="productCard__image">
+        <div class="productCard__info">
+          <span class="productCard__category">Perfume</span>
+          <h1 class="productCard__title">Gabrielle Essence Eau De Parfum</h1>
+          <p class="productCard__desc">A floral, solar and voluptuous interpretation composed by Olivier Polge, 
+            Perfumer-Creator for the House of CHANEL.</p>
+          <div class="productCard__priceBlock">
+            <span class="productCard__currPrice">$149.99</span>
+            <span class="productCard__prevPrice">$169.99</span>
+          </div>
+          <button class="productCard__addToCartButton button button--purchase">Add to Cart</button>
+        </div>
+      </div>
+    </div>
+  </main>
 
-  Preview
-
-  Gabrielle Essence Eau De Parfum
-
-  A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-  Perfumer-Creator for the House of CHANEL.
-
-  $149.99
-  $169.99
-
-  Add to Cart
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+  <footer>
+    <div class="attribution">
+      <p class="attribution__p">Challenge by <a class="attribution__link" href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a></p> 
+      <p class="attribution__p">Coded by <a class="attribution__link" href="https://github.com/lexsupdev" target="_blank" >Aleksei Suppes</a></p>
+    </div>
+  </footer>
 </body>
 </html>
