Fixed desktop version

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <main>
     <div class="productCard">
       <div class="productCard__wrap">
-        <img srcset="images/image-product-mobile.jpg 325w" src="images/image-product-desktop.jpg" alt="Photo of product" class="productCard__image">
+        <img srcset="images/image-product-mobile.jpg 640w, images/image-product-desktop.jpg 1440w" src="images/image-product-desktop.jpg" alt="Photo of product" class="productCard__image">
         <div class="productCard__info">
           <span class="productCard__category">Perfume</span>
           <h1 class="productCard__title">Gabrielle Essence Eau De Parfum</h1>
