--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
   <main>
     <div class="productCard">
       <div class="productCard__wrap">
-        <img srcset="images/image-product-mobile.jpg 640w, images/image-product-desktop.jpg 1440w" src="images/image-product-desktop.jpg" alt="Photo of product" class="productCard__image">
+        <picture>
+          <source media="(max-width: 640px)" srcset="images/image-product-mobile.jpg">
+          <img class="productCard__image" src="images/image-product-desktop.jpg" alt="Photo of perfume">
+        </picture>
         <div class="productCard__info">
           <span class="productCard__category">Perfume</span>
           <h1 class="productCard__title">Gabrielle Essence Eau De Parfum</h1>
@@ -19,7 +22,7 @@
             Perfumer-Creator for the House of CHANEL.</p>
           <div class="productCard__priceBlock">
             <span class="productCard__currPrice">$149.99</span>
-            <span class="productCard__prevPrice">$169.99</span>
+            <span class="productCard__prevPrice"><span class="sr-only">Previous price</span><del>$169.99</del></span>
           </div>
           <button class="productCard__addToCartButton button button--purchase">Add to Cart</button>
         </div>
